--- a/.gitignore
+++ b/.gitignore
@@ -129,17 +129,16 @@ dmypy.json
 .pyre/
 
 # .NET Core
+# Build results
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
 x64/
 x86/
-build/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
 bld/
 [Bb]in/
-[Oo]bj/
-[Oo]ut/
-msbuild.log
-msbuild.err
-msbuild.wrn
+/[Oo]bj/
+[Ll]og/
